# kuberentes-lab

./: .gitignore  README.md  inventory.ini  renovate.json
argocd/: all-the-apps.yaml  argocd-playbook.yml  kustomization.yaml  repositories.yaml
argocd/applications/: argocd.yaml  cert-manager.yaml  cilium.yaml  csi-driver-nfs.yaml  dcgm-exporter.yaml  external-secrets.yaml  keda.yaml  kserve-crds.yaml  kserve-models.yaml  kserve.yaml  longhorn.yaml  metalb.yaml  nginx-ingress.yaml  nvidia-device-plugin.yaml  octoprint.yaml  vcluster-platform.yaml
argocd/applications/manifests/cert-manager/: bitwarden-tls-cert.yaml  letsencrypt-staging.yaml  selfsign-clusterissuer.yaml
argocd/applications/manifests/cilium/: l2-ip-pool.yaml  lab-ingress.yaml
argocd/applications/manifests/csi-driver/: storageclass.yaml
argocd/applications/manifests/external-secrets/: bitwarden-secretstore.yaml
argocd/applications/manifests/grafana-alloy/: alloy-collector.yaml  collector.yaml
argocd/applications/manifests/kserve-models/: inference-qwen.yaml  inference.yaml  (+2 more)
argocd/applications/values/: argocd.yaml  cilium.yaml  csi-driver-nfs.yaml  kserve.yaml  longhorn.yaml  nginx-ingress.yaml  nvidia-device-plugin.yaml  vcluster-platform.yaml
bootstrap/: ubuntu-node-init.yml
group_vars/all/: vault.yml
pulumi/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  proxmox_schema.json  pyproject.toml  talos_config.py  talos_image_factory.py  talos_scema.json
pulumi/components/: __init__.py  talos_cluster.py  talos_image_factory.py  talos_node.py  talos_upgrade.py
terraform/: provider.tf
(+20 files in other folders)
