[project]
name = "kubernets-lab"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pulumi>=3",
    "pulumi-kubernetes>=4.24.1",
    "pulumi-command>=0.12.0",
    "pulumi-proxmoxve>=7.8.1",
    "pulumi-random>=4.14.0",
    "pulumiverse-talos>=0.6.1",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
]
